# jot

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  PLANS.md  README.md  cmake_uninstall.cmake.in  install.sh  package-lock.json
.configs/configs/: debug.json
.configs/configs/colors/: dark.py  light.py
.github/workflows/: cmake-single-platform.yml  linux-binary.yml
apps/jot/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  benchmark_main.cpp
build-asan/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_uninstall.cmake
build-asan/tests/: CTestTestfile.cmake  jot_tests
docs/: DEBUGGER.md  PLUGINS.md  THEMES.md
src/: AGENTS.md  CMakeLists.txt
src/core/: editor.cpp  editor.h  editor_models.h  editor_state.h  event_loop.cpp  event_loop.h  file.cpp  folding.cpp  git.cpp  home.cpp  host_api.cpp  host_api.h  in_memory_line_provider.cpp  in_memory_line_provider.h  integrated_terminal.cpp  lazy_line_provider.cpp  lazy_line_provider.h  line_provider.h  lsp.cpp  panes.cpp  popup.cpp  quick_pick.cpp  sources.cmake  task_queue.h  theme.cpp  tree_sitter_commands.cpp  types.h  undo.cpp  utils.cpp  workspace.cpp
src/core/app/: bookmarks.cpp  editor.cpp  file.cpp  folding.cpp  undo.cpp  utils.cpp
src/core/integrations/: debugger.cpp  integrated_terminal.cpp  lsp.cpp  syntax.cpp  tree_sitter_commands.cpp
src/core/runtime/: event_loop.cpp  in_memory_line_provider.cpp  lazy_line_provider.cpp  task_queue.cpp
src/core/surfaces/: home.cpp  host_api.cpp  popup.cpp  quick_pick.cpp  theme.cpp
src/core/workspace/: git.cpp  tasks.cpp  workspace.cpp
src/edit/: clipboard.cpp  cursor.cpp  datetime.cpp  duplicate.cpp  edit.cpp  feature_reverse_lines.cpp  increment.cpp  join_lines.cpp  lines.cpp  path_clipboard.cpp  replace.cpp  reverse_lines.cpp  search.cpp  shuffle_lines.cpp  sidebar.cpp  sort_desc.cpp  sources.cmake  stats.cpp  surround.cpp  transform.cpp  trim_blank.cpp  unique_lines.cpp
src/features/: autoclose.cpp  autoclose.h  column_utils.h  config.cpp  cpp_assist.cpp  cpp_assist.h  folding.cpp  folding.h  html.cpp  html.h  quote_text_object.cpp  quote_text_object.h  sources.cmake  syntax.cpp  syntax_highlighter.h  text_features.cpp  text_features.h  tree_sitter_catalog.cpp  tree_sitter_catalog.h  tree_sitter_install.cpp  tree_sitter_install.h  tree_sitter_language_spec.cpp  tree_sitter_language_spec.h  tree_sitter_manager.cpp  tree_sitter_manager.h  tree_sitter_queries.cpp
src/features/tree_sitter/: catalog.cpp  install.cpp  install.h  language_spec.cpp  manager.cpp  queries.cpp  runtime.cpp
src/features/tree_sitter/languages/: asm.cpp  bash.cpp  bibtex.cpp  c.cpp  c_sharp.cpp  cmake.cpp  cpp.cpp  css.cpp  csv.cpp  dart.cpp  diff.cpp  dockerfile.cpp  elixir.cpp  erlang.cpp  fish.cpp  fortran.cpp  gdscript.cpp  git_config.cpp  gitcommit.cpp  glsl.cpp  go.cpp  graphql.cpp  haskell.cpp  hcl.cpp  html.cpp  ini.cpp  java.cpp  javascript.cpp  json.cpp  kotlin.cpp  latex.cpp  lua.cpp  make.cpp  markdown.cpp  nix.cpp  ocaml.cpp  perl.cpp  php.cpp  proto.cpp  python.cpp  (+23 more)
src/input/: command_actions.cpp  command_help.cpp  command_palette.cpp  command_palette_input.cpp  command_palette_suggestions.cpp  command_utils.cpp  ex_commands.cpp  menu_bar.cpp  mode_dispatch.cpp  mode_insert.cpp  mode_normal.cpp  mode_visual.cpp  mouse.cpp  sources.cmake
src/input/commands/: actions.cpp  ex.cpp  execute.cpp  help.cpp  navigation.cpp  save_prompt.cpp  utils.cpp  utils.h
src/input/modes/: dispatch.cpp  insert.cpp  modeless.cpp  normal.cpp  transitions.cpp  vim.cpp  visual.cpp
src/input/palette/: input.cpp  palette.cpp  suggestions.cpp
src/platform/windows/tools/: lsp_client.cpp
src/platform/windows/tools/lsp/: client.cpp
src/platform/windows/tools/terminal/: integrated.cpp
src/plugins/: python_api_bindings.cpp
src/python/: jot_api.py
src/python/runtime/: theme.py
src/python_bridge/: api.h  api_bindings.cpp  api_core.cpp  api_impl.cpp  api_impl_editor.inc  api_internal.h  api_theme.cpp  python_api_bindings.cpp  python_api_impl_core.inc  python_api_impl_editor.inc  python_headers.h  sources.cmake
src/render/: buffer.cpp  debugger.cpp  easter.cpp  frame.cpp  git_diff.cpp  minimap.cpp  overlay.cpp  plugin_panel.cpp  render.cpp  render_buffer.cpp  render_overlay.cpp  render_ui.cpp  sources.cmake  ui.cpp
src/tools/: debugger_client.h  discord_rpc.cpp  discord_rpc.h  discord_rpc_win32.cpp  imageviewer.cpp  imageviewer.h  integrated_terminal.cpp  integrated_terminal.h  lsp_client.cpp  lsp_client.h  sources.cmake  symbol_index.cpp  telescope.cpp  telescope.h  telescope_async.cpp  workspace_search.cpp
src/tools/debugger/: client.cpp  client.h
src/tools/lsp/: client.cpp  client.h
src/tools/symbols/: index.cpp  index.h
src/tools/terminal/: integrated.cpp  integrated.h  integrated_win32.cpp
src/tools/workspace/: search.cpp  search.h
src/ui/: components.cpp  components.h  sources.cmake  terminal.cpp  terminal.h  terminal_win32.cpp  text.cpp  text.h  ui.cpp  ui.h  ui_components.cpp  ui_text.h
tests/: CMakeLists.txt  test_cpp_assist.cpp  test_debugger.cpp  test_features.cpp  test_folding.cpp  test_imageviewer.cpp  test_productivity.cpp  test_syntax.cpp  test_telescope.cpp  test_terminal.cpp  test_tree_sitter_install.cpp  test_ui_text.cpp
